<resources>
    <string name="app_name">PlacementApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_staff">Staff</string>
    <string name="txt_companies">Companies</string>
    <string name="txt_student">Student</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_company_name">Company Name</string>
    <string name="txt_location">Location</string>
    <string name="txt_department">Department</string>
    <string name="txt_email_id">Email Id</string>
    <string name="txt_staff_name">Staff Name</string>
    <string name="txt_student_name">Student Name</string>
    <string name="txt_internship">Internship</string>
    <string name="txt_student_reg_no">"Reg. No. : "</string>
    <string name="txt_duration_label">"Duration : "</string>
    <string name="txt_add_staff">Add Staff</string>
    <string name="txt_password">Password</string>
    <string name="txt_invalid_mail_id">Invalid email id</string>
    <string name="txt_password_required">Password required</string>
    <string name="txt_add_student">Add Student</string>
    <string name="txt_add_company">Add company</string>
    <string name="txtEdit">Edit</string>
    <string name="txt_alumni_name">Alumni name</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_view_company">View Company</string>
    <string name="txt_edit_company">Edit company</string>
    <string name="txt_upload_resume">Upload Resume</string>
    <string name="txt_view_pdf">View Pdf</string>
    <string name="txt_remove">Remove</string>
    <string name="txt_technology_explored">Technology explored</string>
</resources>