<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_staff"
            android:title="@string/txt_staff"/>
        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_company"
            android:title="@string/txt_companies" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_student"
            android:title="@string/txt_student" />


        <item
            android:id="@+id/nav_internship"
            android:icon="@drawable/ic_internship"
            android:title="@string/txt_internship" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/txt_logout" />
    </group>
</menu>