<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.placementapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_staff"
            app:destination="@id/nav_staff" />
        <action
            android:id="@+id/action_home_to_student"
            app:destination="@id/nav_student" />
        <action
            android:id="@+id/action_home_to_companies"
            app:destination="@id/nav_companies" />
        <action
            android:id="@+id/action_home_to_internship"
            app:destination="@id/nav_internship" />
    </fragment>

    <fragment
        android:id="@+id/nav_staff"
        android:name="com.example.placementapp.ui.staff.StaffFragment"
        android:label="@string/txt_staff"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_companies"
        android:name="com.example.placementapp.ui.company.CompanyListFragment"
        android:label="@string/txt_companies"
        tools:layout="@layout/fragment_company" >
        <action
            android:id="@+id/action_companies_to_add_company"
            app:destination="@id/nav_add_company" />

        <action
            android:id="@+id/action_cmpnylist_to_view_company"
            app:destination="@id/nav_view_company">
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_student"
        android:name="com.example.placementapp.ui.student.StudentFragment"
        android:label="@string/txt_student"
        tools:layout="@layout/fragment_student" />


    <fragment
        android:id="@+id/nav_internship"
        android:name="com.example.placementapp.ui.internship.StudentInternshipListFragment"
        android:label="@string/txt_internship"
        tools:layout="@layout/fragment_internship_layout" />

    <fragment
        android:id="@+id/nav_add_company"
        android:name="com.example.placementapp.ui.company.AddCompanyFragment"
        android:label="@string/txt_add_company"
        tools:layout="@layout/add_company_fragment" >

    </fragment>

    <fragment
        android:id="@+id/nav_view_company"
        android:name="com.example.placementapp.ui.company.ViewCompanyFragment"
        android:label="@string/txt_view_company"
        tools:layout="@layout/view_company_fragment" >

        <argument
            android:name="companyItem"
            app:argType="string" />
    </fragment>
</navigation>